--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
     background-size: cover;
     color: #ffffff;
     position: relative;
-    overflow: hidden; /* Asegura que los elementos no sobresalgan */
+    overflow: auto; /* Permite el scroll en la página */
 }
 
 body::before {
@@ -28,7 +28,6 @@ body::after {
     left: 0;
     width: 100%;
     height: 100%;
-    
     background: rgba(0, 0, 0, 0.7); /* Añade un overlay oscuro */
     z-index: -1; /* Coloca el overlay detrás del contenido pero delante del pseudo-elemento anterior */
 }
@@ -42,7 +41,7 @@ header {
 
 .header-img {
     width: 100%;
-    height: 200%;
+    height: 100%;
     object-fit: cover;
 }
 
@@ -67,19 +66,21 @@ section::before {
 
 .progress-container {
     width: 80%;
+    max-width: 600px;
     background-color: #444;
     margin: 0 auto;
     border-radius: 25px;
     position: relative;
+    overflow: hidden; /* Asegura que los elementos no sobresalgan */
 }
 
 .progress-bar {
-    width: 60%;
     height: 20px;
     background: linear-gradient(to right, #243873, #4AA534); /* Degradado de azul a verde */
     border-radius: 25px;
     position: relative;
     text-align: center;
+    width: 0; /* Inicialmente a 0 para la animación */
 }
 
 #progress-text {
@@ -94,10 +95,11 @@ section::before {
 
 #coming-soon {
     font-size: 24px;
-    color: #4caf50;
+    background: linear-gradient(to right, blue, green); /* Degradado de azul a verde */
+    -webkit-background-clip: text; /* Clip el fondo al texto para mostrar el degradado */
+    -webkit-text-fill-color: transparent; /* Hace el texto transparente para mostrar el degradado */
     animation: fadeIn 2s ease-out forwards;
 }
-
 
 @keyframes fadeIn {
     0% { opacity: 0; transform: translateY(-20px); }
@@ -108,16 +110,44 @@ section::before {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    margin: 0 auto;
+    max-width: 1200px;
+    padding: 20px; /* Añade padding para que no quede al borde */
 }
 
 .team-member {
     margin: 10px;
     text-align: center;
+    flex: 1 1 300px; /* Hace que los elementos sean flexibles y se adapten */
 }
 
 .team-img {
-    width: 175px;
-    height: 175px;
+    width: 100%;
+    max-width: 220px;
+    height: 220px;
     border-radius: 50%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+}
+
+/* Media queries para pantallas pequeñas */
+@media (max-width: 768px) {
+    header {
+        height: 150px; /* Ajusta según sea necesario */
+    }
+
+    .header-img {
+        height: 100%;
+    }
+
+    .progress-container {
+        width: 90%;
+    }
+
+    #coming-soon {
+        font-size: 20px;
+    }
+
+    .team-member {
+        flex: 1 1 100%; /* Hace que los elementos ocupen el 100% del ancho en pantallas pequeñas */
+    }
 }
